[package]
name = "rust_akv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.19.0"
azure_identity = "0.19.0"
azure_security_keyvault = "0.19.0"
futures = "0.3.30"
reqwest = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
url = "2.5.0"
