[package]
name = "rust_akv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_identity = "0.20.0"
azure_security_keyvault = "0.20.0"
tokio = { version = "1", features = ["full"] }
azure_core = "0.20.0"
